chore: reformat code for prettier 3.x

--- a/app/assets/fonts/fontello/demo.html
+++ b/app/assets/fonts/fontello/demo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
 		<!--[if lt IE 9
@@ -153,7 +153,8 @@
 			@font-face {
 				font-family: "placecal-icons";
 				src: url("./font/placecal-icons.eot?54090451");
-				src: url("./font/placecal-icons.eot?54090451#iefix")
+				src:
+					url("./font/placecal-icons.eot?54090451#iefix")
 						format("embedded-opentype"),
 					url("./font/placecal-icons.woff?54090451") format("woff"),
 					url("./font/placecal-icons.ttf?54090451") format("truetype"),
@@ -197,9 +198,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="css/animation.css" />
-		<!--[if IE 7
-			]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><!
-		[endif]-->
+		<!--[if IE 7]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><![endif]-->
 		<script>
 			function toggleCodes(on) {
 				var obj = document.getElementById("icons");
