--- a/public/406-unsupported-browser.html
+++ b/public/406-unsupported-browser.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="en">
 	<head>
@@ -27,9 +27,21 @@
 				background: #fff;
 				color: #261b23;
 				display: grid;
-				font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-					Aptos, Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial,
-					sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+				font-family:
+					ui-sans-serif,
+					system-ui,
+					-apple-system,
+					BlinkMacSystemFont,
+					Aptos,
+					Roboto,
+					"Segoe UI",
+					"Helvetica Neue",
+					Helvetica,
+					Arial,
+					sans-serif,
+					"Apple Color Emoji",
+					"Segoe UI Emoji",
+					"Segoe UI Symbol",
 					"Noto Color Emoji";
 				font-size: clamp(1rem, 2.5vw, 2rem);
 				-webkit-font-smoothing: antialiased;
